--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,5 +24,9 @@ clickhouse.database=default
 clickhouse.user=default
 clickhouse.password=bsn123123
 clickhouse.debug=true
-
 spring.main.allow-bean-definition-overriding=true
+
+
+spring.r2dbc.url=r2dbc:clickhouse:http://{username}:{password}@{host}:{port}/{database}
+spring.r2dbc.username={username}
+spring.r2dbc.password={password}
