--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,24 @@
 			<artifactId>clickhouse-r2dbc</artifactId>
 			<version>0.7.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.clickhouse</groupId>
 			<artifactId>clickhouse-client</artifactId>
 			<version>0.7.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.r2dbc</groupId>
+			<artifactId>r2dbc-pool</artifactId>
+			<version>0.9.2.RELEASE</version>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.data</groupId>-->
+<!--			<artifactId>spring-data-r2dbc</artifactId>-->
+<!--			<version>1.5.18</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
